# ScaleSpace

./: .gitmodules  CMakeLists.txt  Makefile  README.md
plugins/ScaleSpace/: BrunoAceFont.hpp  BrunoAceSCFont.hpp  DistrhoPluginInfo.h  LektonRegularFont.hpp  Makefile  ScaleSpace.cpp  ScaleSpaceControls.hpp  ScaleSpaceUI.cpp
plugins/ScaleSpace/lib/DPFDearImGuiWidgets/opengl/: DearImGui.cpp
plugins/ScaleSpace/lib/DearWidgetsApi/: dear_widgets.cpp  dear_widgets.h  dear_widgets.hpp
